# PreMop

./: .gitignore  CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/: README.md  main.py
backend/connections/: connection_manager.py
backend/doc_generation/: PREMOPTEMPLATE.docx  README.md  acronyms.py  queries_dic.py  search_dic.py  template_dic.py  ~$EMOPTEMPLATE.docx
backend/generated_files/: README.md
backend/routers/: document_routes.py
backend/services/: context_retrieval_service.py  document_service.py
backend/utils/: document_utils.py  openai__utils.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: file-uploader.tsx  header.tsx  theme-provider.tsx
