[tool.poetry]
name = "caf-mop"
version = "0.1.0"
description = ""
authors = ["carrizojuancruz <juan.carrizo@promtior.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
azure-core = "^1.32.0"
azure-identity = "^1.19.0"
azure-search-documents = "^11.5.2"
azure-storage-blob = "^12.24.0"
beautifulsoup4 = "^4.12.3"
docxtpl = "^0.19.0"
fastapi = "^0.115.6"
langchain = "^0.3.10"
langchain-community = "^0.3.10"
langchain-openai = "^0.2.11"
markdown = "^3.7"
numpy = "^2.2.0"
openai = "^1.57.0"
pandas = "^2.2.3"
pdfplumber = "^0.11.4"
python-dotenv = "^1.0.1"
python-docx = "^1.1.2"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
python-multipart = "^0.0.19"
azure-ai-documentintelligence = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
